kubernetes/main/apps/commafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:5.4.0-postgresql
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          volumeMounts:
            - name: commafeed-data
              mountPath: /commafeed/data
      restartPolicy: Always
      volumes:
        - name: commafeed-data
          persistentVolumeClaim:
            claimName: commafeed-data-pvc
