kubernetes/main/apps/commafeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: commafeed
  name: commafeed
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: commafeed
